[project]
name = "aiblogapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt<4",
    "fastapi[standard]>=0.136.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
]
